--- a/wp-content/themes/remix/style.css
+++ b/wp-content/themes/remix/style.css
@@ -833,7 +833,7 @@ body.single-post {
   background-size: cover;
   background-position-y: 50%;
 }
-/* line 284, sass/partials/article.scss */
+/* line 283, sass/partials/article.scss */
 .article-hero h2 {
   background: rgba(0, 0, 0, 0.7);
   padding: 10px 20px;
@@ -843,14 +843,14 @@ body.single-post {
   font-size: 40px;
 }
 
-/* line 295, sass/partials/article.scss */
+/* line 294, sass/partials/article.scss */
 .article_single .toolbar {
   border-bottom: solid 1px #f0f0f0;
   display: block;
   height: 50px;
   padding: 0 60px;
 }
-/* line 300, sass/partials/article.scss */
+/* line 299, sass/partials/article.scss */
 .article_single .toolbar span.article-tag,
 .article_single .toolbar span.author,
 .article_single .toolbar span.date,
@@ -861,30 +861,34 @@ body.single-post {
   font-family: helvetica, arial, verdana;
   font-size: 12px;
 }
-/* line 310, sass/partials/article.scss */
+/* line 309, sass/partials/article.scss */
 .article_single .toolbar span.crumbs {
   float: right;
   padding-right: 0px;
 }
-/* line 313, sass/partials/article.scss */
+/* line 312, sass/partials/article.scss */
 .article_single .toolbar span.crumbs p {
   font-family: helvetica, arial, verdana;
   font-size: 12px;
 }
-/* line 318, sass/partials/article.scss */
+/* line 317, sass/partials/article.scss */
 .article_single .toolbar .article-tag {
   text-transform: uppercase;
   font-weight: bold;
   width: inherit;
 }
-/* line 324, sass/partials/article.scss */
+/* line 322, sass/partials/article.scss */
+.article_single .toolbar .aligncenter {
+  margin: 0 auto;
+}
+/* line 326, sass/partials/article.scss */
 .article_single .article_content {
   background: #ffffff;
   display: block;
   padding: 40px 0px 40px 60px;
   width: 100%;
 }
-/* line 330, sass/partials/article.scss */
+/* line 332, sass/partials/article.scss */
 .article_single .article_content .content .h1,
 .article_single .article_content .content .h2,
 .article_single .article_content .content .h3,
